[package]
name = "rbrep"
description = "Rust Binary Grep"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
license = "MIT"
# license-file = "./LICENSE"
readme = "README.md"
repository = "https://github.com/unlink2/rbrep"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"
console = "0.15.3"
lazy_static = "1.4.0"
thiserror = "1.0.38"
tinyvec = { version = "1.6.0", features = ["alloc"] }
